--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "repository": "SimenB/node-prometheus-gc-stats",
   "optionalDependencies": {
-    "gc-stats": "^1.4.0"
+    "gc-stats": "github:joshua-bell-sonrai/node-gcstats"
   },
   "dependencies": {
     "optional": "^0.1.3"
